Fix body overflow forcing scroll

--- a/components/com_jce/editor/tiny_mce/themes/advanced/skins/default/content.less
+++ b/components/com_jce/editor/tiny_mce/themes/advanced/skins/default/content.less
@@ -29,7 +29,7 @@ body {
 
 .mceContentBody {
     height: inherit;
-    min-height: 100vh;
+    min-height: calc(100vh - 10px);
     min-width: 90%;
     padding: 5px;
 
